--- a/APPTest/build.gradle
+++ b/APPTest/build.gradle
@@ -45,11 +45,11 @@ android {
 }
 
 dependencies {
-//    implementation "com.android.support:support-v4:${project.android_support_version}"
+    implementation "com.android.support:support-v4:${project.android_support_version}"
 //    api "com.android.support.constraint:constraint-layout:${project.android_constraint_layout_version}"
 //    api "com.android.support:appcompat-v7:${project.android_support_version}"
     kapt "com.bihe0832.android:lib-router-compiler:1.2.1"
-    api 'com.bihe0832.android:lib-wrapper:1.0.2'
+    api 'com.bihe0832.android:lib-wrapper:1.0.3'
 
 //    api project(':LibWrapper')
 }
