--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.bihe0832.android.test">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,9 +9,9 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
         android:icon="@mipmap/icon"
-        android:supportsRtl="true" >
+        android:label="@string/app_name"
+        android:supportsRtl="true">
         <activity
             android:name="com.bihe0832.android.test.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
@@ -29,6 +28,12 @@
             android:screenOrientation="sensor">
 
         </activity>
+
+        <activity
+            android:name=".TestHttpActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="sensor"></activity>
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.bihe0832.test"
