--- a/LibUtils/build.gradle
+++ b/LibUtils/build.gradle
@@ -29,7 +29,7 @@ android {
 publish {
     artifactId = 'lib-utils'//项目名称
     repoName= rootProject.repoName
-    publishVersion = '1.5.9'//版本号
+    publishVersion = '1.6.0'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -50,7 +50,6 @@ dependencies {
 
     api 'com.bihe0832.android:lib-thread:1.2.0'
     api 'com.bihe0832.android:lib-encrypt:1.2.0'
-    api 'com.bihe0832.android:lib-gson:1.2.2'
     api 'com.bihe0832.android:lib-channel:1.2.1'
     api "com.bihe0832.android:lib-timer:1.2.5"
     api 'com.bihe0832.android:lib-config:1.2.1'
@@ -58,6 +57,7 @@ dependencies {
     api 'com.bihe0832.android:lib-sqlite:1.0.0'
 
     api 'com.bihe0832.android:lib-download-install:1.2.8'
+    api 'com.bihe0832.android:lib-http-advanced:1.3.0'
     api 'com.bihe0832.android:lib-tts:1.3.4'
 
 //    api project(':LibAPK')
