--- a/LibDeviceNetwork/build.gradle
+++ b/LibDeviceNetwork/build.gradle
@@ -27,19 +27,16 @@ android {
 
 //添加发布相关的配置
 publish {
-    artifactId = 'lib-wrapper'//项目名称
-    repoName= rootProject.repoName
-    publishVersion = '1.0.7'//版本号
+    artifactId = 'lib-device-network'//项目名称
+    repoName=rootProject.repoName
+    publishVersion = '1.0.0'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
-    desc = 'the utils waptter for zixie'//项目描述
+    desc = 'the device network utils for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory.git'//项目对应网站
 }
 
 dependencies {
-//    api project(':LibUtils')
-//    api project(':LibUIUtils')
-    api "com.bihe0832.android:lib-utils:1.7.0"
-    api "com.bihe0832.android:lib-uiutils:1.3.11"
+    api "com.android.support:appcompat-v7:${project.android_support_version}"
 }
