--- a/LibUtils/build.gradle
+++ b/LibUtils/build.gradle
@@ -29,7 +29,7 @@ android {
 publish {
     artifactId = 'lib-utils'//项目名称
     repoName= rootProject.repoName
-    publishVersion = '1.6.2'//版本号
+    publishVersion = '1.7.0'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -55,6 +55,7 @@ dependencies {
     api 'com.bihe0832.android:lib-config:1.2.1'
     api 'com.bihe0832.android:lib-request:1.0.2'
     api 'com.bihe0832.android:lib-sqlite:1.0.0'
+    api 'com.bihe0832.android:lib-device-network:1.0.0'
 
     api 'com.bihe0832.android:lib-download-install:1.2.8'
     api 'com.bihe0832.android:lib-http-advanced:1.3.0'
