调整划分 统一依赖

--- a/LibFile/build.gradle
+++ b/LibFile/build.gradle
@@ -29,7 +29,7 @@ android {
 publish {
     artifactId = 'lib-file'//项目名称
     repoName = rootProject.repoName
-    publishVersion = '1.2.8'//版本号
+    publishVersion = '1.2.9'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -39,5 +39,6 @@ publish {
 
 dependencies {
     api "com.bihe0832.android:lib-encrypt:1.2.0"
-    api "com.android.support:appcompat-v7:${project.android_support_version}"
+    api "com.bihe0832.android:lib-utils-common:1.2.3"
+
 }
