--- a/LibAdapter/build.gradle
+++ b/LibAdapter/build.gradle
@@ -28,7 +28,7 @@ android {
 publish {
     artifactId = 'lib-adapter'//项目名称
     repoName = rootProject.repoName
-    publishVersion = '1.0.0'//版本号
+    publishVersion = '1.0.2'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -37,5 +37,5 @@ publish {
 }
 
 dependencies {
-    api "com.android.support:recyclerview-v7:${project.android_support_version}"
+    api "com.bihe0832.android:lib-ui-common:1.0.4"
 }
