--- a/LibCommonUtils/build.gradle
+++ b/LibCommonUtils/build.gradle
@@ -29,7 +29,7 @@ android {
 publish {
     artifactId = 'lib-utils-common'//项目名称
     repoName = rootProject.repoName
-    publishVersion = '1.2.1'//版本号
+    publishVersion = '1.2.3'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -38,5 +38,5 @@ publish {
 }
 
 dependencies {
-    api "com.android.support:support-v4:$project.android_support_version"
+    api "com.bihe0832.android:lib-android:1.0.1"
 }
