--- a/LibDeviceNetwork/build.gradle
+++ b/LibDeviceNetwork/build.gradle
@@ -29,7 +29,7 @@ android {
 publish {
     artifactId = 'lib-device-network'//项目名称
     repoName=rootProject.repoName
-    publishVersion = '1.0.0'//版本号
+    publishVersion = '1.0.3'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -38,5 +38,5 @@ publish {
 }
 
 dependencies {
-    api "com.android.support:appcompat-v7:${project.android_support_version}"
+    api "com.bihe0832.android:lib-utils-common:1.2.3"
 }
