--- a/LibFlycoTabLayout/build.gradle
+++ b/LibFlycoTabLayout/build.gradle
@@ -28,7 +28,7 @@ android {
 publish {
     artifactId = 'lib-flycotablayout'//项目名称
     repoName= rootProject.repoName
-    publishVersion = '1.0.0'//版本号
+    publishVersion = '1.0.1'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -38,6 +38,5 @@ publish {
 
 
 dependencies {
-    api "com.android.support:appcompat-v7:$project.android_support_version"
-    api "com.android.support:support-v4:${project.android_support_version}"
+    api "com.bihe0832.android:lib-ui-common:1.0.4"
 }
