--- a/LibUIUtils/build.gradle
+++ b/LibUIUtils/build.gradle
@@ -30,7 +30,7 @@ android {
 publish {
     artifactId = 'lib-uiutils'//项目名称
     repoName = rootProject.repoName
-    publishVersion = '1.3.11'//版本号
+    publishVersion = '1.4.1'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -39,11 +39,15 @@ publish {
 }
 
 dependencies {
-    api 'com.bihe0832.android:lib-toast:1.3.1'
-    api "com.bihe0832.android:lib-ui-common:1.0.2"
-    api "com.bihe0832.android:lib-image:1.0.0"
-    api "com.bihe0832.android:lib-dialog:1.0.4"
-    api 'com.bihe0832.android:lib-notification:1.0.10'
+    api "com.bihe0832.android:lib-ui-common:1.0.4"
 
-//    api project(":LibNotification")
+    api 'com.bihe0832.android:lib-fragmentation-swipeback:1.0.2'
+    api 'com.bihe0832.android:lib-flycotablayout:1.0.1'
+    api 'com.bihe0832.android:lib-qrcode:1.0.5'
+    api 'com.bihe0832.android:lib-refresh:1.0.2'
+
+    api 'com.bihe0832.android:lib-toast:1.3.1'
+    api 'com.bihe0832.android:lib-notification:1.0.15'
+//    api project(':LibNotification')
 }
+
