文件md5 支持分段

--- a/settings.gradle
+++ b/settings.gradle
@@ -34,11 +34,11 @@
 //include ':LibTTS'
 //include ':LibFile'
 //include ':LibDownloadAndInstall'
-
-//include ':LibImage'
-//include ':LibDialog'
-//include ':LibNotification'
-
+//
+////include ':LibImage'
+////include ':LibDialog'
+////include ':LibNotification'
+//
 //include ':LibUIUtils'
 //include ':LibUtils'
 //include ':LibWrapper'
