--- a/LibWrapper/build.gradle
+++ b/LibWrapper/build.gradle
@@ -29,7 +29,7 @@ android {
 publish {
     artifactId = 'lib-wrapper'//项目名称
     repoName= rootProject.repoName
-    publishVersion = '1.1.1'//版本号
+    publishVersion = '1.1.2'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -38,8 +38,46 @@ publish {
 }
 
 dependencies {
+    api 'com.bihe0832.android:lib-router-annotation:1.2.1'
+    api 'com.bihe0832.android:lib-router:1.2.4'
+    api 'com.bihe0832.android:lib-android:1.0.1'
+    api 'com.bihe0832.android:lib-utils-common:1.2.4'
+    api "com.bihe0832.android:lib-ui-common:1.0.4"
+
+    api 'com.bihe0832.android:lib-thread:1.2.0'
+    api 'com.bihe0832.android:lib-encrypt:1.2.1'
+    api 'com.bihe0832.android:lib-channel:1.2.1'
+    api 'com.bihe0832.android:lib-request:1.0.2'
+    api 'com.bihe0832.android:lib-http-common:1.3.0'
+    api 'com.bihe0832.android:lib-http-advanced:1.3.0'
+    api 'com.bihe0832.android:lib-sqlite:1.0.0'
+
+    api 'com.bihe0832.android:lib-fragmentation-core:1.0.1'
+    api 'com.bihe0832.android:lib-fragmentation:1.0.2'
+    api 'com.bihe0832.android:lib-fragmentation-swipeback:1.0.2'
+    api 'com.bihe0832.android:lib-flycotablayout:1.0.1'
+    api 'com.bihe0832.android:lib-qrcode:1.0.5'
+    api 'com.bihe0832.android:lib-adapter:1.0.0'
+    api 'com.bihe0832.android:lib-refresh:1.0.2'
+
+    api 'com.bihe0832.android:lib-device-network:1.0.3'
+
+    api 'com.bihe0832.android:lib-gson:1.2.2'
+    api "com.bihe0832.android:lib-timer:1.2.6"
+    api 'com.bihe0832.android:lib-config:1.2.3'
+    api 'com.bihe0832.android:lib-toast:1.3.1'
+    api 'com.bihe0832.android:lib-utils-apk:1.2.4'
+
+    api 'com.bihe0832.android:lib-tts:1.3.8'
+    api 'com.bihe0832.android:lib-file:1.2.11'
+    api 'com.bihe0832.android:lib-download-install:1.2.12'
+
+    api 'com.bihe0832.android:lib-image:1.0.3'
+    api 'com.bihe0832.android:lib-dialog:1.0.7'
+    api 'com.bihe0832.android:lib-notification:1.0.11'
+
 //    api project(':LibUtils')
 //    api project(':LibUIUtils')
-    api "com.bihe0832.android:lib-utils:1.8.1"
-    api "com.bihe0832.android:lib-uiutils:1.4.1"
+    api "com.bihe0832.android:lib-utils:1.8.2"
+    api "com.bihe0832.android:lib-uiutils:1.4.2"
 }
