升级版本 脚本测试

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath "com.bihe0832.android:GradleDependenciesCheck:1.0.11"
+        classpath "com.bihe0832.android:GradleDependenciesCheck:1.1.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
         classpath 'com.novoda:bintray-release:0.9.1'
     }
@@ -34,6 +34,7 @@ subprojects {
     apply plugin: 'com.bihe0832.gradleDependenciesCheck'
     GradleDependenciesCheckConfig {
         showResultType = 1
+        excludePackage ="com.android.support;org.jetbrains.kotlin"
     }
     afterEvaluate { Project project ->
         project.getTasks().getByName('clean').doFirst {
