--- a/LibChannel/build.gradle
+++ b/LibChannel/build.gradle
@@ -29,10 +29,14 @@ android {
 publish {
     artifactId = 'lib-channel'//项目名称
     repoName=rootProject.repoName
-    publishVersion = '1.2.1'//版本号
+    publishVersion = '1.2.2'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
     desc = 'the channel read for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory.git'//项目对应网站
+}
+
+dependencies {
+    api "com.bihe0832.android:lib-log:1.0.2"
 }
