--- a/settings.gradle
+++ b/settings.gradle
@@ -1,47 +1,47 @@
-////备注：这里的Lib严格按照先后依赖顺序排序，方便快速查看依赖
-include ':RouterAnnotation'
-include ':Router'
-include ':RouterCompiler'
-include ':LibAndroid'
-include ':LibCommonUtils'
-include ':LibCommonUIUtils'
+//////备注：这里的Lib严格按照先后依赖顺序排序，方便快速查看依赖
+//include ':RouterAnnotation'
+//include ':Router'
+//include ':RouterCompiler'
+//include ':LibAndroid'
+include ':LibLog'
 
-include ':LibThread'
-include ':LibEncrypt'
-include ':LibChannel'
-include ':LibRequest'
-include ':LibHttpCommon'
-include ':LibHttpAdvanced'
-include ':LibSqlite'
+//include ':LibCommonUtils'
+//include ':LibCommonUIUtils'
 
-include ':LibFragmentation_core'
-include ':LibFragmentation'
-include ':LibFragmentation_swipeback'
-include ':LibFlycoTabLayout'
-include ':LibQRCode'
-include ':LibAdapter'
-include ':LibRefresh'
+//include ':LibThread'
+//include ':LibEncrypt'
+//include ':LibChannel'
+//include ':LibRequest'
+//include ':LibHttpCommon'
+//include ':LibHttpAdvanced'
+//include ':LibSqlite'
 
+//include ':LibFragmentation_core'
+//include ':LibFragmentation'
+//include ':LibFragmentation_swipeback'
+//include ':LibFlycoTabLayout'
+//include ':LibQRCode'
+//include ':LibAdapter'
+//include ':LibRefresh'
 
-include ':LibDeviceNetwork'
-
-include ':LibGson'
-include ':LibTimer'
-include ':LibConfig'
-include ':LibToast'
-include ':LibAPK'
+//include ':LibDeviceNetwork'
 //
-include ':LibTTS'
-include ':LibFile'
-include ':LibDownloadAndInstall'
+//include ':LibGson'
+//include ':LibTimer'
+//include ':LibConfig'
+//include ':LibToast'
+//include ':LibAPK'
+////
+//include ':LibTTS'
+//include ':LibFile'
+//include ':LibDownloadAndInstall'
 
-include ':LibImage'
-include ':LibDialog'
-include ':LibNotification'
-
-include ':LibUIUtils'
-include ':LibUtils'
-include ':LibWrapper'
-include ':APPTest'
-
+//include ':LibImage'
+//include ':LibDialog'
+//include ':LibNotification'
 //
+//include ':LibUIUtils'
+//include ':LibUtils'
+//include ':LibWrapper'
+//include ':APPTest'
+
