--- a/LibCommonUIUtils/build.gradle
+++ b/LibCommonUIUtils/build.gradle
@@ -29,7 +29,7 @@ android {
 publish {
     artifactId = 'lib-ui-common'//项目名称
     repoName = rootProject.repoName
-    publishVersion = '1.0.4'//版本号
+    publishVersion = '1.0.6'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -39,4 +39,5 @@ publish {
 
 dependencies {
     api "com.bihe0832.android:lib-android:1.0.1"
+    api "com.bihe0832.android:lib-log:1.0.2"
 }
