--- a/LibImage/build.gradle
+++ b/LibImage/build.gradle
@@ -29,7 +29,7 @@ android {
 publish {
     artifactId = 'lib-image'//项目名称
     repoName = rootProject.repoName
-    publishVersion = '1.0.3'//版本号
+    publishVersion = '1.0.4'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
@@ -38,6 +38,7 @@ publish {
 }
 
 dependencies {
+    api "com.bihe0832.android:lib-log:1.0.2"
     api "com.github.bumptech.glide:glide:${project.glide_version}"
     api "com.github.bumptech.glide:okhttp3-integration:${project.glide_version}"
 }
