--- a/LibLog/build.gradle
+++ b/LibLog/build.gradle
@@ -25,19 +25,13 @@ android {
     }
 }
 
-//添加
 publish {
-    artifactId = 'lib-http-advanced'//项目名称
+    artifactId = 'lib-log'//项目名称
     repoName = rootProject.repoName
-    publishVersion = '1.3.2'//版本号
+    publishVersion = '1.0.2'//版本号
     userOrg = rootProject.userOrg
     groupId = rootProject.groupId
     licences = rootProject.licences
-    desc = 'a http request library based on HttpURLConnection'
-    website = 'https://github.com/bihe0832/AndroidAppFactory.git'
-}
-
-dependencies {
-    api 'com.bihe0832.android:lib-http-common:1.3.1'
-    api 'com.bihe0832.android:lib-gson:1.2.3'
+    desc = 'the android source for zixie'//项目描述
+    website = 'https://github.com/bihe0832/AndroidAppFactory'//项目对应网站
 }
