--- a/LibFlycoTabLayout/build.gradle
+++ b/LibFlycoTabLayout/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion project.commonMinSdkVersion
         targetSdkVersion project.targetSdkVersion
-        versionCode project.mnaLib.versionCode
-        versionName project.mnaLib.versionName
+        versionCode project.zixieVersionCode
+        versionName project.zixieVersionName
     }
 
     buildTypes {
@@ -26,17 +26,12 @@ android {
 
 //添加发布相关的配置
 publish {
-    artifactId = 'lib-flycotablayout'//项目名称
-    repoName= rootProject.repoName
-    publishVersion = '1.0.2'//版本号
-    userOrg = rootProject.userOrg
-    groupId = rootProject.groupId
-    licences = rootProject.licences
+    artifactId = rootProject.zixieModuleInfo[project.name].get("artifactId")
+    repoName = rootProject.zixieRepoName
+    publishVersion = rootProject.zixieModuleInfo[project.name].get("version")
+    userOrg = rootProject.zixieUserOrg
+    groupId = rootProject.zixieGroupId
+    licences = rootProject.zixieLicences
     desc = 'the tab layout for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory'//项目对应网站
-}
-
-
-dependencies {
-    api "com.bihe0832.android:lib-ui-common:1.0.6"
 }
