--- a/LibHttpAdvanced/build.gradle
+++ b/LibHttpAdvanced/build.gradle
@@ -11,8 +11,8 @@ android {
     defaultConfig {
         minSdkVersion project.commonMinSdkVersion
         targetSdkVersion project.targetSdkVersion
-        versionCode project.mnaLib.versionCode
-        versionName project.mnaLib.versionName
+        versionCode project.zixieVersionCode
+        versionName project.zixieVersionName
     }
 
     buildTypes {
@@ -27,17 +27,12 @@ android {
 
 //添加
 publish {
-    artifactId = 'lib-http-advanced'//项目名称
-    repoName = rootProject.repoName
-    publishVersion = '1.3.2'//版本号
-    userOrg = rootProject.userOrg
-    groupId = rootProject.groupId
-    licences = rootProject.licences
+    artifactId = rootProject.zixieModuleInfo[project.name].get("artifactId")
+    repoName = rootProject.zixieRepoName
+    publishVersion = rootProject.zixieModuleInfo[project.name].get("version")
+    userOrg = rootProject.zixieUserOrg
+    groupId = rootProject.zixieGroupId
+    licences = rootProject.zixieLicences
     desc = 'a http request library based on HttpURLConnection'
     website = 'https://github.com/bihe0832/AndroidAppFactory.git'
-}
-
-dependencies {
-    api 'com.bihe0832.android:lib-http-common:1.3.1'
-    api 'com.bihe0832.android:lib-gson:1.2.3'
 }
