--- a/LibUIUtils/build.gradle
+++ b/LibUIUtils/build.gradle
@@ -11,8 +11,8 @@ android {
     defaultConfig {
         minSdkVersion project.commonMinSdkVersion
         targetSdkVersion project.targetSdkVersion
-        versionCode project.mnaLib.versionCode
-        versionName project.mnaLib.versionName
+        versionCode project.zixieVersionCode
+        versionName project.zixieVersionName
     }
 
     buildTypes {
@@ -28,26 +28,12 @@ android {
 
 //添加发布相关的配置
 publish {
-    artifactId = 'lib-uiutils'//项目名称
-    repoName = rootProject.repoName
-    publishVersion = '1.4.4'//版本号
-    userOrg = rootProject.userOrg
-    groupId = rootProject.groupId
-    licences = rootProject.licences
+    artifactId = rootProject.zixieModuleInfo[project.name].get("artifactId")
+    repoName = rootProject.zixieRepoName
+    publishVersion = rootProject.zixieModuleInfo[project.name].get("version")
+    userOrg = rootProject.zixieUserOrg
+    groupId = rootProject.zixieGroupId
+    licences = rootProject.zixieLicences
     desc = 'the ui utils for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory'//项目对应网站
 }
-
-dependencies {
-    api "com.bihe0832.android:lib-ui-common:1.0.6"
-
-    api 'com.bihe0832.android:lib-fragmentation-swipeback:1.0.3'
-    api 'com.bihe0832.android:lib-flycotablayout:1.0.2'
-    api 'com.bihe0832.android:lib-qrcode:1.0.6'
-    api 'com.bihe0832.android:lib-refresh:1.0.3'
-
-    api 'com.bihe0832.android:lib-toast:1.3.1'
-    api 'com.bihe0832.android:lib-notification:1.0.18'
-//    api project(':LibNotification')
-}
-
