--- a/LibWrapper/build.gradle
+++ b/LibWrapper/build.gradle
@@ -11,8 +11,8 @@ android {
     defaultConfig {
         minSdkVersion project.commonMinSdkVersion
         targetSdkVersion project.targetSdkVersion
-        versionCode project.mnaLib.versionCode
-        versionName project.mnaLib.versionName
+        versionCode project.zixieVersionCode
+        versionName project.zixieVersionName
     }
 
     buildTypes {
@@ -27,58 +27,12 @@ android {
 
 //添加发布相关的配置
 publish {
-    artifactId = 'lib-wrapper'//项目名称
-    repoName= rootProject.repoName
-    publishVersion = '1.1.4'//版本号
-    userOrg = rootProject.userOrg
-    groupId = rootProject.groupId
-    licences = rootProject.licences
+    artifactId = rootProject.zixieModuleInfo[project.name].get("artifactId")
+    repoName = rootProject.zixieRepoName
+    publishVersion = rootProject.zixieModuleInfo[project.name].get("version")
+    userOrg = rootProject.zixieUserOrg
+    groupId = rootProject.zixieGroupId
+    licences = rootProject.zixieLicences
     desc = 'the utils waptter for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory.git'//项目对应网站
-}
-
-dependencies {
-    api 'com.bihe0832.android:lib-router-annotation:1.2.1'
-    api 'com.bihe0832.android:lib-router:1.2.4'
-    api 'com.bihe0832.android:lib-android:1.0.1'
-    api 'com.bihe0832.android:lib-log:1.0.2'
-    api 'com.bihe0832.android:lib-utils-common:1.2.6'
-    api "com.bihe0832.android:lib-ui-common:1.0.6"
-
-    api 'com.bihe0832.android:lib-thread:1.2.0'
-    api 'com.bihe0832.android:lib-encrypt:1.2.2'
-    api 'com.bihe0832.android:lib-channel:1.2.2'
-    api 'com.bihe0832.android:lib-request:1.0.2'
-    api 'com.bihe0832.android:lib-http-common:1.3.1'
-    api 'com.bihe0832.android:lib-http-advanced:1.3.2'
-    api 'com.bihe0832.android:lib-sqlite:1.0.0'
-
-    api 'com.bihe0832.android:lib-fragmentation-core:1.0.2'
-    api 'com.bihe0832.android:lib-fragmentation:1.0.3'
-    api 'com.bihe0832.android:lib-fragmentation-swipeback:1.0.3'
-    api 'com.bihe0832.android:lib-flycotablayout:1.0.2'
-    api 'com.bihe0832.android:lib-qrcode:1.0.6'
-    api 'com.bihe0832.android:lib-adapter:1.0.3'
-    api 'com.bihe0832.android:lib-refresh:1.0.2'
-
-    api 'com.bihe0832.android:lib-device-network:1.0.6'
-
-    api 'com.bihe0832.android:lib-gson:1.2.4'
-    api "com.bihe0832.android:lib-timer:1.2.7"
-    api 'com.bihe0832.android:lib-config:1.2.5'
-    api 'com.bihe0832.android:lib-toast:1.3.1'
-    api 'com.bihe0832.android:lib-utils-apk:1.2.5'
-
-    api 'com.bihe0832.android:lib-tts:1.3.10'
-    api 'com.bihe0832.android:lib-file:1.2.13'
-    api 'com.bihe0832.android:lib-download-install:1.2.13'
-
-    api 'com.bihe0832.android:lib-image:1.0.4'
-    api 'com.bihe0832.android:lib-dialog:1.0.8'
-    api 'com.bihe0832.android:lib-notification:1.0.18'
-
-//    api project(':LibUtils')
-//    api project(':LibUIUtils')
-    api "com.bihe0832.android:lib-utils:1.8.4"
-    api "com.bihe0832.android:lib-uiutils:1.4.4"
 }
