--- a/Router/build.gradle
+++ b/Router/build.gradle
@@ -29,12 +29,12 @@ android {
 
 //添加发布相关的配置
 publish {
-    artifactId = 'lib-router'//项目名称
-    repoName= rootProject.repoName
-    publishVersion = '1.2.4'//版本号
-    userOrg = rootProject.userOrg
-    groupId = rootProject.groupId
-    licences = rootProject.licences
+    artifactId = rootProject.zixieModuleInfo[project.name].get("artifactId")
+    repoName = rootProject.zixieRepoName
+    publishVersion = rootProject.zixieModuleInfo[project.name].get("version")
+    userOrg = rootProject.zixieUserOrg
+    groupId = rootProject.zixieGroupId
+    licences = rootProject.zixieLicences
     desc = 'the router module for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory'//项目对应网站
 }
