--- a/RouterCompiler/build.gradle
+++ b/RouterCompiler/build.gradle
@@ -3,19 +3,12 @@ apply plugin: 'com.novoda.bintray-release'
 
 //添加发布相关的配置
 publish {
-    artifactId = 'lib-router-compiler'//项目名称
-    repoName = rootProject.repoName
-    publishVersion = '1.2.4'//版本号
-    userOrg = rootProject.userOrg
-    groupId = rootProject.groupId
-    licences = rootProject.licences
+    artifactId = rootProject.zixieModuleInfo[project.name].get("artifactId")
+    repoName = rootProject.zixieRepoName
+    publishVersion = rootProject.zixieModuleInfo[project.name].get("version")
+    userOrg = rootProject.zixieUserOrg
+    groupId = rootProject.zixieGroupId
+    licences = rootProject.zixieLicences
     desc = 'the router compiler for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory'//项目对应网站
-}
-
-dependencies {
-    compile 'com.squareup:javapoet:1.8.0'
-    compile 'com.google.auto.service:auto-service:1.0-rc3'
-    compile 'com.bihe0832.android:lib-router-annotation:1.2.1'
-    compile 'com.bihe0832.android:lib-router:1.2.3'
 }
